apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'Kernel'
sourceCompatibility = 1.8
targetCompatibility = 1.8
version = '1.0'
group 'oscarGroupId'

repositories {
    mavenCentral()
}

dependencies {
    compile 'com.google.api-client:google-api-client:1.23.0'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
    compile 'com.google.apis:google-api-services-gmail:v1-rev83-1.23.0'
    compile 'com.sendgrid:sendgrid-java:4.4.4'
    compile group: 'javax.mail', name: 'mail', version: '1.4.1'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-email
    compile group: 'org.apache.commons', name: 'commons-email', version: '1.5'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    runtime "mysql:mysql-connector-java:5.1.37"
}
